# LongRangeScanners

./: README.md
java/: .gitignore  QUICK_START.md  README.md  pom.xml  run-tests.sh
notes/: TASK_10_STATUS.md  (+7 more)
python/: .gitignore  QUICK_START.md  README.md  coverage.sh  lint.sh  pyproject.toml  run-tests.sh  setup.sh
python/src/exercises/: __init__.py
python/src/exercises/task01/: README.md  variable_exercises.py
python/src/exercises/task02/: README.md  conditional_exercises.py
python/src/exercises/task03/: README.md  loop_exercises.py
python/src/exercises/task04/: README.md  list_array_exercises.py  test_list_array_exercises.py
python/src/exercises/task05/: README.md  map_dictionary_exercises.py  test_map_dictionary_exercises.py
python/src/exercises/task06/: README.md  string_manipulation_exercises.py  test_string_manipulation_exercises.py
python/src/exercises/task07/: README.md  string_padding_trimming_exercises.py  test_string_padding_trimming_exercises.py
python/src/exercises/task08/: string_formatting_alignment_exercises.py  test_string_formatting_alignment_exercises.py
python/src/exercises/task09/: README.md  number_formatting_exercises.py  test_number_formatting_exercises.py
python/src/exercises/task10/: README.md  regular_expressions_exercises.py  test_regular_expressions_exercises.py
python/src/exercises/task11/: README.md  exception_handling_exercises.py  test_exception_handling_exercises.py
python/src/exercises/task12/: README.md  integrated_practice_exercises.py  test_integrated_practice_exercises.py
python/tests/task01/: test_variable_exercises.py
python/tests/task02/: test_conditional_exercises.py
python/tests/task03/: test_loop_exercises.py
(+38 files in other folders)
